--- a/src/styles/stylesM.css
+++ b/src/styles/stylesM.css
@@ -1,18 +1,98 @@
-.buttonM{
+
+  .buttonR{
     border: 2px solid #212121;
     -webkit-box-shadow: none;
     box-shadow: none;
     background-color: #212121;
-    color: rgb(197, 38, 38);
+    color: white;
     padding: 13px 24px;
     cursor: pointer;
     display: inline-block;
     -webkit-transition: all 0.3s;
     transition: all 0.3s;
-    height: auto;
-    border-radius: 20;
+    border-radius: 2;
     font-weight: 400;
     text-transform: uppercase;
     font-size: 14px;
     text-decoration: none;
+
   }
+  .PosButtonL{
+    border: 2px solid #212121;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    background-color: #b6b2b2;
+    color: white;
+    padding: 13px 24px;
+    cursor: pointer;
+    display: inline-block;
+    -webkit-transition: all 0.3s;
+    transition: all 0.3s;
+    border-radius: 2;
+    font-weight: 400;
+    text-transform: uppercase;
+    font-size: 14px;
+    text-decoration: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+  }
+
+  /*Acontinuación estan los estilos para todos los formularios de las páginas*/
+form{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+input, select{
+  color: #212121;
+  border: 1px solid #212121;
+  border-radius: 0;
+  padding: 12px 6px;
+  min-height: 51px;
+  margin-bottom: 0px;
+  min-width: 30vw;
+}
+label{
+  min-width: 30vw;
+}
+input:focus, select:focus{
+  color: #111;
+  outline: none;
+  -webkit-box-shadow: 0 0 0 1px;
+  box-shadow: 0 0 0 1px;
+}
+/* clase para etiqueta padre del form*/
+.flex-form{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+/*Estilos para label*/
+
+.label{
+  font-family: Inter,sans-serif; 
+  font-size: 16px;  
+}
+
+/*------------*/
+
+/*Estilos botones de página login*/
+
+.caja-botones{
+  display: flex;
+  flex-direction: column; 
+  min-width: 30vw; 
+}
+.button-gmail{
+  margin-bottom: 25px;
+}
+h2{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
