--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -127,10 +127,16 @@ img {
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
 }
+.flex-column{
+  flex-direction: column;
+}
 .flex-end {
   -webkit-box-pack: end;
   -ms-flex-pack: end;
   justify-content: flex-end;
+}
+.flex-justify-center{
+  justify-content: center;
 }
 .main-navigation {
   display: block;
@@ -201,4 +207,16 @@ img {
 }
 .mg-tb-10 {
   margin: 10px 0;
+}
+.text-center{
+  text-align: center;
+}
+.actualizar{
+  width: 230px;
+}
+.table-container{
+  margin: 50px 0 20px;
+}
+.table-container table td{
+  padding: 5px 10px;
 }
