--- a/src/styles/stylesM.css
+++ b/src/styles/stylesM.css
@@ -1,35 +1,3 @@
-  .PosButtonL{
-    display: flex;
-    justify-content: flex-end;
-   }
-   .PosButtonN{
-    display: flex;
-    justify-content: flex-end;
-   }
-   .PosButtonCrud{
-    display: flex;
-    justify-content: space-evenly;
-   }
-    .centrardiv{
-      margin:auto
-    }
-    .posBuscar{
-      display: flex;
-      /* flex-direction:row;   */
-      align-items: flex-start; 
-    }
-
-.inputProd{
-  
-  color: #212121;
-  border: 1px solid #212121;
-  border-radius: 0;
-  padding: 12px 6px;
-  min-height: 5px;
-  margin-bottom: 0px;
-  min-width: 5vw;
-  font-size: 20px;
-}
 #transactionTable{
   margin: 50px 0;
 }
@@ -39,3 +7,18 @@
 .button{
   text-align: center;
 }
+.PosButtonCrud{
+  margin-bottom: 10px;
+  display: flex;
+  justify-content: space-evenly;
+  width: 100%;
+}
+
+.inputProd{
+  min-width: 0;
+  min-height: 15px;
+  width: 150px;
+  height:40px;
+  margin: 0;
+}
+input.inputProd[type='checkbox'] { width: 20px; }
