--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -221,3 +221,36 @@ img {
 .table-container table td{
   padding: 5px 10px;
 }
+
+.tabla {
+  width: 100%;
+  margin: 10px;
+  overflow-y: scroll;
+}
+
+.tabla td,
+.tabla th {
+  padding: 8px;
+  border: 1px solid #ddd;
+}
+
+.tabla th {
+  background-color: #090909;
+  color: white;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+}
+
+.tabla tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+
+.tabla tr:hover {
+  background-color: #ddd;
+}
+.tabla input {
+  min-width: auto;
+  width: 100%;
+  margin: 0;
+}
